# sphinx-try-examples

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
sphinx_try_examples/: __init__.py  generate_notebook.py  sphinx_try_examples.css  sphinx_try_examples.js  sphinx_try_examples.py
